<resources>
    <string name="app_name">Finding Falcone</string>
    <string name="select_vehicle">Select vehicle</string>
    <string name="distance">%1$s miles</string>
    <string name="find_falcone">Find Falcone</string>
    <string name="select_vehicle_for_king_shan">Select vehicle for King Shan</string>
    <string name="vehicle_name">%1$s (%2$s)</string>
    <string name="vehicle_details">Max distance: %1$s megamiles, speed %2$s megamiles/hour</string>
    <string name="retry">Retry</string>
    <string name="load_failure">Failed to load game</string>
    <string name="remove">Remove</string>
    <string name="select_vehicle_failure">You can\'t select more than for 4 planets</string>
    <string name="win_title">You won!</string>
    <string name="win_message">Congratulations on Finding Falcone. King Shan is mighty pleased. Falcone has been found on %1$s planet</string>
    <string name="lose_title">You lost!</string>
    <string name="lose_message">Don\'t be sad, you can retry by clicking play again button</string>
    <string name="play_again">Play again</string>
    <string name="incomplete_selection">Please select 4 planets</string>
    <string name="time_taken">Time taken: %1$s hours</string>
    <string name="find_failure">Something went wrong. Please try again</string>
    <string name="no_internet">Please check your internet connection</string>
</resources>
